Update git notes

--- a/008-git-101.md
+++ b/008-git-101.md
@@ -35,16 +35,8 @@ $ git status
 ## Committing files
 Now that you have files in the staging area, you can save a snapshot of the staging area using a commit.
 
-```sh
+```
 $ git commit -m "Message"
-```
-
-This will open a text editor, probably Atom. (See [Configuring git editor](#Configuring git editor) if Atom doesn't open.)
-
-Enter a commit message as the first line in the editor (e.g. "Initial commit" or "Fix the font in index.html"). Save the document in the editor and close the window. git will finish running in the terminal and you should see output like the following:
-
-```
-$ git commit
 [master 7b84c79] Fix font in index.html
 1 file changed, 12 insertions(+), 2 deletions(-)
 ```
@@ -56,4 +48,5 @@ $ git commit
 $ git add .
 $ git commit
 $ git push
+# or `git push -u origin master` if it is the first time you're pushing
 ```
