--- a/002-css-101.md
+++ b/002-css-101.md
@@ -1,4 +1,5 @@
 # CSS 101
+## CSS Rules
 - A block of CSS code that applies properties to a selection of elements is
   called a "rule".
 - A rule is made up of a "selector" and one or more property declarations.
@@ -7,6 +8,29 @@
   values.
 - Each property declaration ends with a semicolon
 - The list of property declarations goes between curly braces (i.e. `{ }`)
+
+### Example
+
+```css
+div > a // selector
+{
+  border-color: red;
+  // property: value;
+  // Also, the whole line is a "rule"
+}
+
+::before { } // pseudoelement
+:hover { } // pseudoclass
+
+// Muliple selectors for a group of rules
+
+a:hover,
+a:active {
+   color: chartreuse;
+}
+```
+
+## Other Notes
 - CSS can be written inside a `<style>` tag inside the `<head>`, but it's best
   practice to put CSS in an external file and link to it using `
 - To select the elements of a certain HTML tag, the selector is just the tag
@@ -17,7 +41,7 @@
 - To find out whether a property is inherited by its children, look up the
   property on MDN (or Dash.app)
 
-# CSS inheritance and specificity
+## CSS inheritance and specificity
 - CSS can be overriden by declaring a property farther down the "cascade".
 - The highest priority rules are "inline", i.e. defined on the `style` attribute
   of a element. This is almost never a good practice to do in your HTML, but is
